Added pcl 1.7 requirements to CMakeLists
Added PCL common libraries to src CMakeLists

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,9 @@ add_executable(${PROJECT_NAME} main.cpp)
 
 #target_sources(${PROJECT_NAME} PRIVATE)
 
-target_link_libraries(${PROJECT_NAME} ${freenect2_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} 
+                      ${freenect2_LIBRARIES} 
+                      ${PCL_COMMON_LIBRARIES})
 
 install(TARGETS ${PROJECT_NAME} DESTINATION . CONFIGURATIONS Debug)
 install(TARGETS ${PROJECT_NAME} DESTINATION . CONFIGURATIONS Release)
