Working point cloud display, with correctly placed points

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,8 @@ target_link_libraries(${PROJECT_NAME}
                       ${freenect2_LIBRARIES}
                       ${PCL_COMMON_LIBRARIES}
                       ${PCL_VISUALIZATION_LIBRARIES}
-                      ${VTK_LIBRARIES})
+                      ${VTK_LIBRARIES}
+                      ${OpenCV_LIBRARIES})
 
 install(TARGETS ${PROJECT_NAME} DESTINATION . CONFIGURATIONS Debug)
 install(TARGETS ${PROJECT_NAME} DESTINATION . CONFIGURATIONS Release)
