Updated to use PCL 1.8

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,10 @@ endif()
 
 set(CMAKE_CXX_OUTPUT_EXTENSION_REPLACE 1)
 
+find_package(OpenCL REQUIRED)
 find_package(freenect2 REQUIRED)
 find_package(OpenCV REQUIRED)
-find_package(PCL 1.7 REQUIRED COMPONENTS io common visualization)
+find_package(PCL 1.8 REQUIRED COMPONENTS io common visualization filters)
 find_package(VTK REQUIRED)
 
 set(GCC_COMPILE_FLAGS
@@ -55,8 +56,7 @@ include_directories(
 
 link_directories(
     "/usr/lib"
-    "/usr/local/lib"
-    "${PCL_LIBRARY_DIRS}")
+    "/usr/local/lib")
 
 
 add_subdirectory(src)
