--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,8 +10,7 @@ target_link_libraries(${PROJECT_NAME}
     ${PCL_FILTERS_LIBRARIES}
     ${PCL_FEATURES_LIBRARIES}
     ${VTK_LIBRARIES}
-    ${OpenCV_LIBRARIES}
-    ${OpenCL_LIBRARIES})
+    ${OpenCV_LIBRARIES})
 
 install(TARGETS ${PROJECT_NAME} DESTINATION . CONFIGURATIONS Debug)
 install(TARGETS ${PROJECT_NAME} DESTINATION . CONFIGURATIONS Release)
